--- a/Task1/expense-tracker/back-end/public/expense/index.css
+++ b/Task1/expense-tracker/back-end/public/expense/index.css
@@ -15,17 +15,14 @@ form {
     margin: auto;
     padding: 3rem 1rem 1rem;
 }
-
 form label {
     display: block;
     margin-top: 0.5rem;
 }
-
 form input {
     width: 95%;
     margin-top: 1px;
 }
-
 #pages button, dialog #close {
     margin: 0.5rem 0;
     /* display: block; */
@@ -34,15 +31,13 @@ form input {
     color: white;
 }
 
-form select {
-    width: 95%;
+form input[type="date"] {
+    /* width: 95%; */
     margin-bottom: 0.8rem;
 }
-
 h2 {
     text-align: center;
 }
-
 div {
     width: fit-content;
     margin: auto;
@@ -55,15 +50,18 @@ a {
 }
 #expenses {
     width: 70%;
-    /* border: 1px dotted gray; */
-    
+    /* border: 1px dotted gray; */    
     /* align-items: center; */
+}
+#expenses li {
+    list-style: none;
+    margin: 0 auto;
 }
 #expenses div {
     display: inline-block;
-    margin-left: 30%;
+    margin-left: 20%;
     width: 40%;
-    justify-content: center;
+    /* justify-content: center; */
     /* border: 1px dotted gray; */
 }
 #pages button {
@@ -89,9 +87,8 @@ a {
     border: none;
     background-color: navajowhite;
 }
-
-#expenses li {
-    list-style: none;
+ol li {
+    margin-left: 35%;
 }
 #plus {
     box-sizing: border-box;
