--- a/back-end/public/views/expense.htm
+++ b/back-end/public/views/expense.htm
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar" style=" z-index: 1;">
+    <nav class="navbar sticky-top" style=" z-index: 1;">
         <div class="container">
             <a href="#" class="active">Dashboard</a>
             <a href='./report.html'>Report</a>
