--- a/back-end/public/views/report.html
+++ b/back-end/public/views/report.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar">
+    <nav class="navbar sticky-top">
             <div class="container">
             <a href="expense.htm">Dashboard</a>
             <a href="#" class="active">Report</a>
