--- a/back-end/public/views/expense.htm
+++ b/back-end/public/views/expense.htm
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./sources/expense.css">
     <title>Expense Tracker</title>
 </head>
@@ -16,7 +17,7 @@
         <div class="container">
             <a href="#" class="active">Dashboard</a>
             <a href='./report.html'>Report</a>
-            <a href="./login.html" role="button" onclick="localStorage.removeItem('token')">Logout</a>
+            <a role="button">Logout</a>
             <h2 class="premium"
                 style="color: rgb(249, 114, 99);margin-right: 5rem;margin-top: 0;font-family: arial;display: inline-block;">
             </h2>
@@ -47,7 +48,8 @@
                         <option>Charity/Donation</option>
                         <option>Others</option>
                     </select>
-                    <input type="text" class="form-control d-none" id="custom" name="custom" placeholder="Enter own category">
+                    <input type="text" class="form-control d-none" id="custom" name="custom"
+                        placeholder="Enter own category">
                     <label for="date">Select Date</label>
                     <input class="form-control" type="date" id="date" name="date" required>
                     <button type="submit" id="submit" class="btn btn-info btn-sm">Add Expense</button>
@@ -55,23 +57,6 @@
                 </div>
             </form>
         </dialog>
-        <!-- <form>
-
-            <label for="amount">Enter expense amount</label>
-            <input type="number" id="amount" name="amount" min="1" required />
-            <label for="desc">Enter description</label>
-            <input type="text" id="desc" name="description" required />
-            <label for="category">Choose a category</label>
-            <select id="category" name="category" required>
-                <option value="">--from below--</option>
-                <option>Movie</option>
-                <option>Picnic</option>
-                <option>Exhibition</option>
-                <option>Household</option>
-            </select>
-            <button type="submit" id="submit" class="btn btn-outline-secondary btn-sm">Add Expense</button>
-            <p id="error"></p>
-        </form> -->
         <button class="btn btn-outline-secondary btn-sm" id="premium" style="display: none;">Buy Premium</button>
         <!-- <input type="button" id="download" value="Download file" title="Premium feature" disabled /> -->
         <button class="btn btn-outline-secondary btn-sm" id="leader" style="display: none;">Show Leaderboard</button>
@@ -83,8 +68,21 @@
     <div class="container"><button id="plus" class="btn btn-info" title="Add new expense"><span>+</span></button></div>
     <div class="container welcome"></div>
     <div class="expenses">
-        <div id="expenses"></div><br />
-        <div>
+        <div class="px-md-4 px-1">
+            <table class="table caption-top">
+                <caption class="h2 text-center">Expenses</caption>
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Date</th>
+                        <th>Description</th>
+                        <th class="d-md-table-cell d-none">Category</th>
+                        <th>Amount (in ₹)</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
+        <div class="text-center pt-3">
             <span>
                 <label for="per-page">Expenses per page:</label>
                 <select name="per-page" id="per-page">
@@ -101,14 +99,14 @@
         </div>
     </div>
     <!-- <ol id="leaderboard"></ol> -->
-    <div id="leaderboard"></div>
-    <div id="downloads">
+    <div class="text-center" id="leaderboard"></div>
+    <div class="text-center" id="downloads">
         <h2>Downloads</h2>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="./sources/expense.js"></script>
 </body>
