--- a/back-end/public/views/expense.htm
+++ b/back-end/public/views/expense.htm
@@ -18,9 +18,6 @@
             <a href="#" class="active">Dashboard</a>
             <a href='./report.html'>Report</a>
             <a role="button">Logout</a>
-            <h2 class="premium"
-                style="color: rgb(249, 114, 99);margin-right: 5rem;margin-top: 0;font-family: arial;display: inline-block;">
-            </h2>
         </div>
     </nav>
     <div>
@@ -57,17 +54,12 @@
                 </div>
             </form>
         </dialog>
-        <button class="btn btn-outline-secondary btn-sm" id="premium" style="display: none;">Buy Premium</button>
-        <!-- <input type="button" id="download" value="Download file" title="Premium feature" disabled /> -->
-        <button class="btn btn-outline-secondary btn-sm" id="leader" style="display: none;">Show Leaderboard</button>
-        <!-- <button class="btn btn-outline-secondary btn-sm" id="report"
-            onclick="location.href='../expense_report/report.html'">Generate Report</button>
-        <a href="../login_page/login.html" role="button" onclick="localStorage.removeItem('token')">Logout</a> -->
-        <!-- </div> -->
     </div>
     <div class="container"><button id="plus" class="btn btn-info" title="Add new expense"><span>+</span></button></div>
-    <div class="container welcome"></div>
-    <div class="expenses">
+    <div class="container welcome pt-3 d-none">
+        
+    </div>
+    <div class="expenses d-none">
         <div class="px-md-4 px-1">
             <table class="table caption-top">
                 <caption class="h2 text-center">Expenses</caption>
@@ -86,7 +78,6 @@
             <span>
                 <label for="per-page">Expenses per page:</label>
                 <select name="per-page" id="per-page">
-                    <!-- <option value="">--from below--</option> -->
                     <option selected>5</option>
                     <option>10</option>
                     <option>20</option>
@@ -97,11 +88,16 @@
             </span>
             <div id="pages"></div>
         </div>
-    </div>
-    <!-- <ol id="leaderboard"></ol> -->
-    <div class="text-center" id="leaderboard"></div>
-    <div class="text-center" id="downloads">
-        <h2>Downloads</h2>
+    </div>    
+    <div class="dashboard d-flex flex-wrap justify-content-center d-none mt-4">
+        <div class="col-md-6 col-10 text-center mb-3" id="leaderboard">
+            <h2 style="font-family: arial;cursor: pointer;" title="Show leaderboard">
+                Leaderboard
+            </h2>
+        </div>
+        <div class="col-6 text-center mb-2" id="downloads">
+            <h2 style='font-family: arial;'>Downloads</h2>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
