--- a/back-end/public/views/report.html
+++ b/back-end/public/views/report.html
@@ -20,7 +20,19 @@
             <a role="button">Logout</a>
     </nav>
     </div>
-    <div class="mt-4">
+    <div class="container premium pt-3 d-none">
+        <p class="lead">
+            This is a premium feature. Generates expense reports based on date, month,
+            year and also custom date range. To start using this feature, click on
+            the button below.
+        </p>
+        <p class="text-center">
+            <button class="btn btn-outline-secondary btn-sm" id="premiumBtn">
+                Buy Premium
+            </button>
+        </p>
+    </div>
+    <div class="mt-4 d-none">
         <select name="order" id="view" class="ms-md-0 ms-2">
             <option>DAILY</option>
             <option>WEEKLY</option>
@@ -28,7 +40,6 @@
 
         </select>
         <label>EXPENSES</label><br /><br />
-        <!-- <label>Select</label> -->
         <input type="date" name="date" id="date" class="d-none ms-md-0 ms-3" />
         <span id="week" class="d-none ms-md-0 ms-2">
             <input type="date" name="start" id="start" value="" />
@@ -53,13 +64,12 @@
                 <th>Expense (in ₹)</th>
             </tr>
         </table>
-        <button class="btn d-md-block d-none rounded-pill" id="downloadBtn">Download</button>
-        <!-- <button class="btn d-md-none" id="downloadIcon">
-        </button> -->
+        <button class="btn d-md-block d-none rounded-pill" id="downloadBtn">Download</button>        
         <span class="d-md-none" id="downloadIcon" title="Download report">
             <i class="bi bi-arrow-down-circle-fill d-flex"></i>
         </span>
     </div>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
