--- a/back-end/public/views/sources/expense.css
+++ b/back-end/public/views/sources/expense.css
@@ -1,20 +1,14 @@
 .navbar {
-    min-height: 3rem;
+    min-height: 4rem;
     background-color: #348a3c;
 }
-.navbar a:hover, .navbar a.active {
-    color: white;
-}
-.navbar a {
+.container a {
     text-decoration: none;
-    color: #d8d4d4;
+    color: #d8d4d4 !important;
     font-family: verdana;
 }
-a[role="button"] {
-    color: #d8d4d4 !important;
-}
-.navbar a[role='button']:hover {
-    color: white;
+.container a:hover, .container a.active{
+    color: white !important;
 }
 form {
     width: 18rem;
@@ -56,37 +50,9 @@ form p {
 a {
     text-decoration: none;
 }
-#expenses {
-    width: 70%;
-    /* overflow-x: scroll; */
-    /* border: 1px dotted gray; */    
-    /* align-items: center; */
-}
-#expenses li {
-    width: 100%;
-    /* overflow-x: scroll; */
-}
-#expenses li {
-    list-style: none;
-    margin: 0 auto;
-}
-#expenses div {
-    display: inline-block;
-    width: 45%;
-    /* margin-left: 20%; */
-    /* text-align: center; */
-    /* margin: 0 auto; */
-    /* align-items: center  */
-    /* justify-content: center; */
-    /* border: 1px dotted gray; */
-}
 #pages button {
     margin-right: 6px;
     transition: height 0.1s;
-}
-.del-icon {
-    /* font-style: bold; */
-    font-weight: bolder;
 }
 .btn-outline-success, .btn-outline-danger {
     line-height: 0.5rem;
@@ -105,10 +71,6 @@ a {
     outline: none;
     border: none;
     background-color: navajowhite;
-}
-ol li {
-    text-align: center;
-    list-style: none;
 }
 #leaderboard li {
     list-style: none;
@@ -135,7 +97,6 @@ dialog {
     border-radius: 4px;
     border: none;
     background-color: whitesmoke;
-    /* background-image: linear-gradient(180deg, rgba(255,0,0,0) 10%, rgba(255,0,0,0.95)); */
 }
 dialog form {
     border-radius: 4px;
